Adicionando Netlify Identity

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,6 @@
     <link rel="stylesheet" href="/assets/normalize.css">
     <link rel="shortcut icon" href="/assets/imagens/favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#0a1e3a">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <title>{{site.title}} | {{ page.title }}</title>
 </head>
