--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,3 +22,14 @@
         <span>© 2021 CATI</span>
     </div>
 </footer>
+<script>
+    if (window.netlifyIdentity) {
+      window.netlifyIdentity.on("init", user => {
+        if (!user) {
+          window.netlifyIdentity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+    }
+</script>
