Adicionando collection "Politicas"

--- a/_layouts/politicas.html
+++ b/_layouts/politicas.html
@@ -1,6 +1,7 @@
 {% include politicashead.html %}
 <body class="pagina-esp-bg">
+    <div class="politicas">
     {{ content }}
-
+    </div>
     {% include footer.html %}
 </body>
