--- a/assets/politicas.css
+++ b/assets/politicas.css
@@ -14,9 +14,10 @@
 }
 
 h2 {
-    font: 0.9em 'Bebas Neue';
+    font: 2em 'Bebas Neue';
     letter-spacing: 1px;
     padding-bottom: 0.5em;
+    font-weight: 600;
 }
 
 p {
@@ -24,7 +25,7 @@ p {
     font-weight: 350;
     margin-bottom: 1em;
 }
-ol {
+ol, ul {
     font: 1em "Poppins";
     font-weight: 350;
     margin: 0 2em 1em 2em;
