Adicionando nova collection "Paginas" e algumas correções

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,6 +9,7 @@
     <div class="rodape-links">
         <div class="rodape-wrapper">
             <div class="links">
+                <a>{{ page.url }} (teste)</a>
                 <a id="inicio" href="#cabeçalho" target="_self">Inicio</a>
                 <a id="termos" href="termos.html" target="_self">Termos</a>
                 <a id="privacidade" href="privacidade.html" target="_self">Privacidade</a>
