--- a/_includes/blogheader.html
+++ b/_includes/blogheader.html
@@ -2,7 +2,7 @@
     {% include hamburguer.html %}
 
     <header id="cabeçalho">
-        <h1 class="logo"><img src="/assets/imagens/maejr1.png" alt="{{ site.title }}"></h1>
+        <h1 class="logo"><a href="/"><img src="/assets/imagens/maejr1.png" alt="{{ site.title }}"></a></h1>
     </header>
 
     {% include nav.html %}
