--- a/_includes/nuvem.html
+++ b/_includes/nuvem.html
@@ -2,52 +2,48 @@
     <div class="cab-nuvem">
         <h2 class="titulo">Serviços que prestamos</h2>
     </div>
-   {{ array[0] }}
     <div class="grid">
         <div class="item">
             <div class="cabecalho">
-                <i class="fas fa-users"></i>
-                <h3>Plano de Marketing</h3>
+                <i>{{ array[0] }}</i>
+                <h3>{{ array[1] }}</h3>
             </div>
-            <p>O Planejamento de Marketing tem como propósito descrever estratégias mercadológicas para a iniciativa de
-                expansão do público-alvo do empreendimento ou para inserção de um novo produto ou serviço no mercado.
-            </p>
+            <p>{{ array[2] }}</p>
         </div>
         <div class="item">
             <div class="cabecalho">
-                <i class="fas fa-search"></i>
-                <h3>Pesquisa de Mercado</h3>
+                <i>{{ array[3] }}</i>
+                <h3>{{ array[4] }}</h3>
             </div>
-            <p>O processo de pesquisa de mercado consiste na definição do problema e dos objetivos de pesquisa,
-                desenvolvimento do plano de pesquisa, coleta de informações, análise das informações e apresentação dos
-                resultados.</p>
+            <p>{{ array[5] }}</p>
         </div>
         <div class="item">
             <div class="cabecalho">
-                <i class="fas fa-clipboard-list"></i>
-                <h3>Plano de Negócio</h3>
+                <i>{{ array[6] }}</i>
+                <h3>{{ array[7] }}</h3>
             </div>
-            <p>É um documento de planejamento capaz de nos mostrar toda a viabilidade e estratégias deste, do ponto de
-                vista estrutural, administrativo, estratégico, mercadológico, técnico, operacional e financeiro de um
-                empreendimento.</p>
+            <p>{{ array[8] }}</p>
         </div>
         <div class="item">
             <div class="cabecalho">
-                <i class="fas fa-business-time"></i>
-                <h3>Gestão de Talentos</h3>
+                <i>{{ array[9] }}</i>
+                <h3>{{ array[10] }}</h3>
             </div>
-            <p>A Gestão de Talentos é peça fundamental para alcançar os objetivos que uma empresa almeja. Com uma boa
-                gestão essas metas serão atingidas de forma ainda mais rápida. Afinal, empresas são resultados de
-                pessoas.</p>
+            <p>{{ array[11] }}</p>
         </div>
         <div class="item">
             <div class="cabecalho">
-                <i class="fas fa-rocket"></i>
-                <h3>Planejamento Estratégico</h3>
+                <i>{{ array[12] }}</i>
+                <h3>{{ array[13] }}</h3>
             </div>
-            <p>É um processo gerencial que se refere à formulação de objetivos para a seleção de programas de ação e
-                para sua execução, levando em conta as condições internas e externas à empresa e sua evolução esperada.
-            </p>
+            <p>{{ array[14] }}</p>
+        </div>
+        <div class="item">
+            <div class="cabecalho">
+                <i>{{ array[15] }}</i>
+                <h3>{{ array[16] }}</h3>
+            </div>
+            <p>{{ array[17] }}</p>
         </div>
         <div class="imagem">
             <img src="/assets/imagens/imagem.png" alt="Consulta">
