--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,9 @@
 
 <body>
     {% include header.html %}
-
+    <div class="default">
     {{ content }}
+    </div>
 
     {% include footer.html %}
 </body>
