--- a/assets/default.css
+++ b/assets/default.css
@@ -1,2 +1,15 @@
 @import 'componentes/all.css';
 @import 'widgets.css';
+
+.default {
+    text-align: center;
+}
+
+.default h2 {
+    font-family: "Bebas Neue", sans-serif;
+    margin: 2rem 0 2rem 0;
+    color: #1a1a1a;
+    font-size: 2.4rem;
+    border-bottom: 3px solid #008bd8;
+    display: inline-block;
+}
