Correções no CSS e componentes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
                 <h2>{{ page.bannertitle }}</h2>
                 <p>{{ page.bannersubtitle }}</p>
                 {% if page.buttontext %}
-                <a href="#sobre"><button class="saibamais">{{ page.buttontext }}</button></a>
+                <a href="{{ page.buttonlink }}"><button class="saibamais">{{ page.buttontext }}</button></a>
                 {% endif %}
             </div>
         </div>
