--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,12 @@
+<script>
+    var elementos = document.getElementsByClassName("item-minicards")
+    for (var item in elementos) { 
+        if (elementos[item].children[1].children[0].innerHTML == "") {
+            elementos[item].innerHTML = "";
+        }
+    }
+</script>
+
 <footer class="rodape">
     <div class="container-rodape">
         <div class="text1-rodape">
@@ -29,12 +38,12 @@
 </footer>
 <script>
     if (window.netlifyIdentity) {
-      window.netlifyIdentity.on("init", user => {
-        if (!user) {
-          window.netlifyIdentity.on("login", () => {
-            document.location.href = "/admin/";
-          });
-        }
-      });
+        window.netlifyIdentity.on("init", user => {
+            if (!user) {
+                window.netlifyIdentity.on("login", () => {
+                    document.location.href = "/admin/";
+                });
+            }
+        });
     }
 </script>
