Correção no CSS das listas ordenadas/não ordenadas

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     {% include hamburguer.html %}
 
     <header id="cabeçalho">
-        <h1 class="logo-banner"><img src="assets/imagens/maejr2.png" alt="{{ site.title }}"></h1>
+        <h1 class="logo-banner"><a href="/"><img src="assets/imagens/maejr2.png" alt="{{ site.title }}"></a></h1>
         <div class="hero-banner">
             <div class="img-wrapper">
                 <img src="{{ page.bannerimage }}">
